--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>App</finalName>
 	</build>
 
 </project>
